hana cloud vector engine introduction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "SAP HANA Database Explorer.displaySapWebAnalyticsStartupNotification": false,
     "SAP HANA Database Artifacts.displaySapWebAnalyticsStartupNotification": false,
-    "SAP HANA SQLScript LSP.URL": "https://hana-cockpit.cfapps.us10.hana.ondemand.com"
+    "SAP HANA SQLScript LSP.URL": "https://hana-cockpit.cfapps.us10.hana.ondemand.com",
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#0F3238",
+        "titleBar.activeBackground": "#15464F",
+        "titleBar.activeForeground": "#F6FCFD"
+    }
 }
